llm-app-deployment/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui-ollama-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: open-webui-ollama
  template:
    metadata:
      labels:
        app: open-webui-ollama
    spec:
      containers:
      - name: open-webui
        image: ghcr.io/open-webui/open-webui:main
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: open-webui-data
          mountPath: /app/backend/data

      - name: ollama
        image: ollama/ollama:0.3.12
        ports:
        - containerPort: 11434
        volumeMounts:
        - name: ollama-data
          mountPath: /root/.ollama
      volumes:  # This should be nested under spec.template.spec
        - name: open-webui-data
          emptyDir: {}
        - name: ollama-data
          emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: open-webui-ollama-service
spec:
  selector:
    app: open-webui-ollama
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      name: open-webui-port  # Added name
    - protocol: TCP
      port: 11434
      targetPort: 11434
      name: ollama-port  # Added name
  type: NodePort
